--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,41 +5,49 @@
     <title>Login</title>
   </head>
   <body>
-    <h1>Login</h1>
-	<ul>
-		<% if(messages.success_msg) { %>
-			<li><%= messages.success_msg %></li>
-		<%}%>
-	</ul>
+	  <div class="ui two column centered grid">
+			<div class="row">
+				<div class="column">
 
-	<ul>
-		<% if(messages.error) { %>
-			<li><%= messages.success_msg %></li>
-		<%}%>
-	</ul>
-    <form action="/users/login" method="POST">
-      <div>
-        <input
-          type="email"
-          name="email"
-          id="email"
-          placeholder="Email"
-          required
-        />
-      </div>
-      <div>
-        <input
-          type="password"
-          name="password"
-          id="password"
-          placeholder="Password"
-          required
-        />
-      </div>
-      <div>
-        <input type="submit" value="login" />
-      </div>
-      <a href="/users/Register">Register</a>
-    </form>
-  </body>
-</html>
+					<h1>Login</h1>
+					<ul>
+					  <% if(messages.success_msg) { %>
+					  <li><%= messages.success_msg %></li>
+					  <%}%>
+					</ul>
+				
+					<ul>
+					  <% if(messages.error) { %>
+					  <li><%= messages.success_msg %></li>
+					  <%}%>
+					</ul>
+					<form action="/users/login" method="POST" class="ui form">
+					  <div class="field">
+						<input
+						class="ui input error"
+						  type="email"
+						  name="email"
+						  id="email"
+						  placeholder="Email"
+						  required
+						/>
+					  </div>
+					  <div class="field">
+						<input
+						class="ui input error"
+						  type="password"
+						  name="password"
+						  id="password"
+						  placeholder="Password"
+						  required
+						/>
+					  </div>
+					  <div>
+						<input class="ui blue button" type="submit" value="login" />
+					  </div>
+					  <a href="/users/Register">You are not registered yet? Register now!</a>
+					</form>
+				</div>
+			</div>
+	  </div>
+	  <%- include('partials/footer'); %>
